--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "less": "^2.7.2",
     "marked": "^0.3.6",
     "postcss": "^5.2.16",
+    "postcss-flexbugs-fixes": "^2.1.0",
     "q": "^1.5.0",
     "regenerator": "^0.9.7",
     "uglify-js": "^2.8.21"
