--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "regenerator": "^0.9.7",
     "uglify-js": "^2.8.21"
   },
+  "browserslist": [
+    "> 0.25%",
+    "IE 10",
+    "IE 11"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
