--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
       "type": "MIT",
       "url": "https://github.com/zanona/pakku/blob/master/LICENSE"
     }
+  ],
+  "browserslist": [
+    "> 0.25%",
+    "IE 11"
   ]
 }
