--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "clean-css": "^4.0.11",
     "filendir": "^1.0.0",
     "html-minifier": "^3.4.2",
-    "imagemin": "^3.2.2",
+    "imagemin": "^5.3.1",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-pngquant": "^5.1.0",
     "less": "^2.7.2",
     "marked": "^0.3.6",
     "postcss": "^5.2.16",
