--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "imagemin": "^5.3.1",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.1.0",
+    "imagemin-svgo": "^6.0.0",
     "less": "^2.7.2",
     "marked": "^0.3.6",
     "postcss": "^5.2.16",
